<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- CONTENT -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/master_label"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/formContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wo_no">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtWoNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:focusable="false"
                android:cursorVisible="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.example.civn26t01.ui.custom.DateInputView
            android:id="@+id/dateInputView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:hint="@string/date" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/printer">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/tvPrinter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilQty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/qty">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtQty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>



    </LinearLayout>
    <!-- ================= BOTTOM BUTTON BAR ================= -->
    <LinearLayout
        android:id="@+id/bottomButtonBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="108dp"
            android:layout_height="48dp"
            android:background="@drawable/border_btn_primary"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/back"/>

        <Space
            android:layout_width="18dp"
            android:layout_height="1dp"/>

        <Button
            android:id="@+id/btnCreate"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:textSize="16sp"
            android:background="@drawable/bg_btn_primary"
            android:text="@string/compare"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
