<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- CONTENT -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_box_label"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/formContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wo_no">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtWoNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:focusable="false"
                android:cursorVisible="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.example.civn26t01.ui.custom.DateInputView
            android:id="@+id/dateInputView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:hint="@string/date" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilQty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/qty">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtQty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" /> <!-- Changed to numberDecimal to support decimal input -->
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <!-- Dropdown  -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCategory"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/category">

                <AutoCompleteTextView
                    android:id="@+id/actvCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:focusable="false"
                    android:cursorVisible="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Khoảng cách -->
            <Space
                android:layout_width="8dp"
                android:layout_height="1dp" />

            <!-- Checkbox -->
            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cbCompleted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/completed"
                android:textSize="14sp" />
        </LinearLayout>


    </LinearLayout>
    <!-- ================= BOTTOM BUTTON BAR ================= -->
    <LinearLayout
        android:id="@+id/bottomButtonBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="108dp"
            android:layout_height="48dp"
            android:background="@drawable/border_btn_primary"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/back"/>

        <Space
            android:layout_width="18dp"
            android:layout_height="1dp"/>

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:textSize="16sp"
            android:background="@drawable/bg_btn_primary"
            android:text="@string/continue_tt"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
